Fix vote button size on mobile

--- a/components/ssVotes/ssVotes.module.css
+++ b/components/ssVotes/ssVotes.module.css
@@ -45,8 +45,7 @@
 }
 
 .infoSection {
-  padding: 0 20px;
-  padding-right: 0;
+  padding: 0 0 0 20px;
   background: #DBE6EC;
   border: 1px solid #86B9D6;
 }
@@ -333,6 +332,20 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    padding: 0 0 0 10px;
+  }
+
+  .buttonOverrideFixed {
+    padding: 12px 10px !important;
+    margin-left: 10px !important;
+  }
+
+  .helpText {
+    font-size: 14px !important;
+  }
+
+  .errorText {
+    font-size: 14px !important;
   }
 
   .controls > .tokenSelect {
